--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>MeetMe Personal</title>
+        <title>Shifat</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -75,14 +75,18 @@
 							<div class="media-body">
 								<div class="personal_text">
 									<h6>Hello Everybody, i am</h6>
-									<h3>Donald McKinney</h3>
-									<h4>Junior UI/UX Developer</h4>
-									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
+									<h3>Shifat Hossain</h3>
+									<h4>Junior Support Engineer</h4>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
+										<li><a href="#"><i class="lnr lnr-office"></i>ArCom</a></li>
+									</ul>
+
+									<p>To obtain a job that will challenge me and allow me to use my skills in a way that is mutually beneficial to both myself and my employer and allows me for future growth and advancement.</p>
+									<ul class="list basic_info">
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 15 Februrary, 1996</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> +8801688253844</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i> shifat160@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i> Dhaka Bangladesh</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -135,7 +139,7 @@
         				<div class="tools_expert">
         					<div class="skill_main">
 								<div class="skill_item">
-									<h4>After Effects <span class="counter">85</span>%</h4>
+									<h4>PHP<span class="counter">60</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -143,7 +147,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Photoshop <span class="counter">90</span>%</h4>
+									<h4>HTML & CSS<span class="counter">80</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -151,7 +155,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Illustrator <span class="counter">70</span>%</h4>
+									<h4>JAVASCRIPT <span class="counter">40</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
@@ -159,7 +163,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Sublime <span class="counter">95</span>%</h4>
+									<h4>WORDPRESS CUSTOMIZATION<span class="counter">95</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -167,7 +171,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Sketch <span class="counter">75</span>%</h4>
+									<h4>FRAMEWORK : LARAVEL <span class="counter">50</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
