added my company

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<h3>Shifat Hossain</h3>
 									<h4>Junior Support Engineer</h4>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-office"></i>ArCom</a></li>
+										<li><a href="#"><i class="lnr lnr-apartment"></i>Company: ArCom</a></li>
 									</ul>
 
 									<p>To obtain a job that will challenge me and allow me to use my skills in a way that is mutually beneficial to both myself and my employer and allows me for future growth and advancement.</p>
