added my picture

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/mypic.jpg" alt="">
+								<img src="img/mypic-removebg.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
@@ -147,7 +147,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>HTML & CSS<span class="counter">80</span>%</h4>
+									<h4>HTML & CSS <span class="counter">80</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -163,7 +163,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>WORDPRESS CUSTOMIZATION<span class="counter">95</span>%</h4>
+									<h4>WORDPRESS CUSTOMIZATION <span class="counter">95</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
