--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         </section>
         <!--================End Testimonials Area =================-->
         
-        <!--================Footer Area =================-->
+        <!--================Footer Area =================
         <footer class="footer_area p_120">
         	<div class="container">
         		<div class="row footer_inner">
