--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<!-- Collect the nav links, forms, and other content for toggling -->
+						<!-- Collect the nav links, forms, and other content for toggling 
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> 
+								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
 								<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li> 
 								<li class="nav-item submenu dropdown">
@@ -89,9 +89,9 @@
 										<li><a href="#"><i class="lnr lnr-home"></i> Dhaka Bangladesh</a></li>
 									</ul>
 									<ul class="list personal_social">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+										<li><a href="https://www.facebook.com/shifu.160"><i class="fa fa-facebook"></i></a></li>
+										<li><a href=" https://www.instagram.com/shifu.160/"><i class="fa fa-instagram"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/mohammad-shifat-hossain-a04610112"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div>
@@ -109,27 +109,29 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+        					<p>I have more than 5 years of experience building web sites and web applications using modern web front end technologies and a variety of content management systems.  I specialize in developing web sites, Online Stores and web applications with the Wordpress content management system.
+I have deep knowledge in OOP frontend and backend programming integrated with MVC/CMS Frameworks including Laravel 7, Wordpress, Vue.js, etc. Also I am strong at responsive modern web design using HTML5/Bootstrap/SASS.
+</p>
         					<div class="row">
         						<div class="col-md-4">
         							<div class="wel_item">
         								<i class="lnr lnr-database"></i>
-        								<h4>$2.5M</h4>
-        								<p>Total Donation</p>
+        								<h4></h4>
+        								<p>Optimized Database</p>
         							</div>
         						</div>
         						<div class="col-md-4">
         							<div class="wel_item">
         								<i class="lnr lnr-book"></i>
-        								<h4>1465</h4>
+        								<h4>20+</h4>
         								<p>Total Projects</p>
         							</div>
         						</div>
         						<div class="col-md-4">
         							<div class="wel_item">
         								<i class="lnr lnr-users"></i>
-        								<h4>3965</h4>
-        								<p>Total Volunteers</p>
+        								<h4>30+</h4>
+        								<p>Total Team Work Experience</p>
         							</div>
         						</div>
         					</div>
@@ -296,21 +298,21 @@
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
-        					<i class="flaticon-eucalyp"></i>
-        					<h4>Architecture</h4>
+        					<i class="fa fa-shopping-basket">
+        					<h4>Ecommerce Website</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
-        					<i class="flaticon-skyline"></i>
-        					<h4>Interior Design</h4>
+        					<i class="fa fa-user"></i>
+        					<h4>Portfolio Website</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
-        					<i class="flaticon-sketch"></i>
+        					<i class="fa fa-briefcase"></i>
         					<h4>Concept Design</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
