--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ I have deep knowledge in OOP frontend and backend programming integrated with MV
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
-        					<i class="fa fa-shopping-basket">
+						<i class="fa fa-shopping-basket"></i>
         					<h4>Ecommerce Website</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
