--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ I have deep knowledge in OOP frontend and backend programming integrated with MV
         </section>
         <!--================End Welcome Area =================-->
         
-        <!--================My Tabs Area =================-->
+        <!--================My Tabs Area =================
         <section class="mytabs_area p_120">
         	<div class="container">
         		<div class="tabs_inner">
@@ -313,7 +313,7 @@ I have deep knowledge in OOP frontend and backend programming integrated with MV
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="fa fa-briefcase"></i>
-        					<h4>Concept Design</h4>
+        					<h4>Agency Websites</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
