--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+<!--
 								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
 								<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li> 
 								<li class="nav-item submenu dropdown">
@@ -54,8 +55,8 @@
 										<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
 									</ul>
 								</li> 
-								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-							</ul>
+								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
+							</ul> 
 						</div> 
 					</div>
             	</nav>
